--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">ND940C3-Project</string>
+    <string name="app_name">Download</string>
     <string name="app_description" >Download files from Internet</string>
     <string name="action_settings" >Settings</string>
 
