--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <string name="app_name">Download</string>
     <string name="app_description" >Download files from Internet</string>
     <string name="action_settings" >Settings</string>
 
     <string name="download_notification_channel_id" translatable="false">download_channel</string>
     <string name="download_notification_channel_name" translatable="true">Download</string>
-    <string name="show" translatable="true">Show Details</string>
+    <string name="show_details" translatable="true">Show Details</string>
 
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
@@ -19,12 +19,12 @@
     <string name="retrofit">Retrofit</string>
     <string name="load_app">LoadApp</string>
 
-    <string name="glideGithubURL">https://github.com/bumptech/glide</string>
-    <string name="loadAppGithubURL">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
-    <string name="retrofitGithubURL">https://github.com/square/retrofit</string>
+    <string name="glide_url">https://github.com/bumptech/glide</string>
+    <string name="load_app_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
+    <string name="retrofit_url">https://github.com/square/retrofit</string>
 
-    <string name="noRepotSelectedText">Please select the file to download</string>
-    <string name="kk">Download Image</string>
+    <string name="no_url_selected_text">Please select the file to download</string>
+    <string name="download_image">Download Image</string>
     <string name="file_name_title">File Name</string>
     <string name="status_title">Status</string>
     <string name="ok_button">OK</string>
